--- a/src/views/components/img-header.njk
+++ b/src/views/components/img-header.njk
@@ -3,7 +3,7 @@
   <section class="container-fluid px-0">
     <div class="row g-0">
       <div class="col">
-        <img class="kbl-header-img" src="{{ RaikouServer }}/{{img}}"/>
+        <img class="kbl-header-img" src="{{ RaikouServer }}/{{img}}" alt="Aerial view of Utah State University campus."/>
               <h1 class="text-center imgHeaderTitle imgHeaderGen">
               {{headerTitle}}
               </h1>
