--- a/src/views/components/news-card.njk
+++ b/src/views/components/news-card.njk
@@ -37,7 +37,7 @@
           <a class="news-itemFirst col-11" href="{{news.link}}" target="_blank">
             <div class="row ps-0">
               <div class="col ps-2 my-auto">
-                <img src="{{news.img}}" class="img-fluid">
+                <img src="{{news.img}}" class="img-fluid" alt="{{news.alt_text}}">
               </div>
               <div class="col-10 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> {{news.date}}</span>
@@ -58,7 +58,7 @@
           <a class="news-itemSecond col-11" href="{{news.link}}" target="_blank">
             <div class="row ps-0">
               <div class="col ps-2 my-auto">
-                <img src="{{news.img}}" class="img-fluid">
+                <img src="{{news.img}}" class="img-fluid" alt="{{news.alt_text}}">
               </div>
               <div class="col-10 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> {{news.date}}</span>
