--- a/src/views/components/pub-legend.njk
+++ b/src/views/components/pub-legend.njk
@@ -19,7 +19,7 @@
     <span class="fa-stack pub-legend-container"  id="underline">
       <i class="fas fa-square fa-stack-2x"></i>
       <!-- I probably shouldn't be doing this, but I need to get a slanted underline icon. -->
-      <i class="pub-legend-icon"><img src="https://bioinfocore.usu.edu/raikou/image/bioinfo/underline-slanted-solid.png" style="right:20" width="62%"></i>
+      <i class="pub-legend-icon"><img src="https://bioinfocore.usu.edu/raikou/image/bioinfo/underline-slanted-solid.png" style="right:20" width="62%" alt="Underline symbol."></i>
     </span>
     
     <span class="fa-stack pub-legend-container"  id="italic">
