--- a/src/views/pages/home/_research-data.njk
+++ b/src/views/pages/home/_research-data.njk
@@ -2,7 +2,8 @@
     heading: "Artificial Intelligence: OMICS bigdata to novel biological discoveries",
     desc: "Computational modeling through pattern recognition, develop novel algorithms and...",
     img: "/image/raw/bioinfo/AI-processor-LowRes-v1.jpg",
-    link: "/research"
+    link: "/research",
+    alt_text: "Computer chip on head with wires and blue electricity emanating from the chip."
   }
 %}
 
@@ -10,7 +11,8 @@
     heading: "Precision Agriculture: Robotics for integrated weed management (IWM)",
     desc: "Incorporate sensing technology for precise IWM, minimize damage to crop, environment...",
     img: "/image/raw/bioinfo/sabbi-post/p_agr.jpg",
-    link: "/research"
+    link: "/research",
+    alt_text: "Drone flying over field."
   }
 %}
 
@@ -18,7 +20,8 @@
     heading: "gdhd",
     desc: "fsffh",
     img: "afhsfdsh",
-    link: "/research"
+    link: "/research",
+    alt_text: ""
   }
 %}
 
@@ -26,7 +29,8 @@
     heading: "Host-pathogen interactions: Understanding mechanisms of infectious diseases",
     desc: "Explore cross-kingdom threats and identify novel therapeutic candidates...",
     img: "/image/raw/bioinfo/HPI_new.gif",
-    link: "/research"
+    link: "/research",
+    alt_text: "Diagram of Host and Pathogen proteins combining."
   }
 %}
 
@@ -34,7 +38,8 @@
     heading: "Metagenomics: Bioinformatics solutions for crop improvement",
     desc: "Investigate diversity of enzymes in soil metagenomes and develop advanced tools...",
     img: "/image/raw/bioinfo/meta_new.png",
-    link: "/research"
+    link: "/research",
+    alt_text: "Diagram of various items. A tree with worms and microbes at its roots, a series of shapes connected by lines, and a gear with wires and nodes extending from it with the label machine learning. The words mineralization and nitrification are at the with chemical formulas (H2O and CO2 for mineralization and NH4+, NO2-, and NO3- for nitrification)."
   }
 %}
 
@@ -42,7 +47,8 @@
     heading: "Protein function prediction: Annotation of novel proteomes",
     desc: "Identify novel protein features, train in an AI framework, implement as web servers...",
     img: "/image/raw/bioinfo/functionalbg_resized.png?w=271&h=211",
-    link: "/research"
+    link: "/research",
+    alt_text: "Model of a cell."
   }
 %}
 
@@ -50,7 +56,8 @@
     heading: "NGS studies: Deciphering and making sense of the complex -omics bigdata",
     desc: "Identification of novel expressed genes from transcriptomics studies, methylation patterns...and more text",
     img: "/image/raw/bioinfo/datamining-lowres.png",
-    link: "/research"
+    link: "/research",
+    alt_text: "The words Data Mining and a pickaxe made with a pcb design."
   }
 %}
 
