--- a/src/views/pages/home/home.njk
+++ b/src/views/pages/home/home.njk
@@ -62,7 +62,7 @@
         <div class="h-100 gray-bg">
           <section class="mb-3 position-relative video" data-bs-toggle="modal" data-bs-target="#videoModal">
             <i class="fab fa-youtube fa-5x yt-logo"></i>
-            <img src="{{ RaikouServer }}/image/raw/bioinfo/rs_usu_winter.jpg?w=742&h=432" class="img-fluid">
+            <img src="{{ RaikouServer }}/image/raw/bioinfo/rs_usu_winter.jpg?w=742&h=432" class="img-fluid", alt="Image of the Old Main Building at USU covered in snow.">
           </section>
           <div class="modal fade" id="videoModal" tabindex="-1">
             {% include "./video-modal.njk" %}
