--- a/src/views/pages/home/the-team.njk
+++ b/src/views/pages/home/the-team.njk
@@ -5,7 +5,7 @@
               <article class="kbl-person-card-container auto">
                 <div class="kbl-person-card rakesh-card">
                   <figure>
-                    <img class="w-100 mb-2 img-round" src="{{ RaikouServer }}/image/raw/bioinfo/profile/RK_2.jpg">
+                    <img class="w-100 mb-2 img-round" src="{{ RaikouServer }}/image/raw/bioinfo/profile/RK_2.jpg" alt="Dr. Rakesh Kaundal.">
                     <figcaption class="pb-2 px-3">
                       <div clas="title-wrapper">
                         <h5>Dr. Rakesh Kaundal</h5>
