--- a/src/views/pages/news/data.njk
+++ b/src/views/pages/news/data.njk
@@ -3,7 +3,8 @@
     date: "November 20, 2024",
     desc: "HPIpy leverages computational algorithms to predict accurate and reliable interactions between host and pathogen proteins.",
     img: "https://bioinfocore.usu.edu/raikou/image/bioinfo/tools/hpipy.png",
-    link: "/hpipy/"
+    link: "/hpipy/",
+    alt_text: "HPIpy web page."
 } %}
 
 {% set naveenDefends = {
@@ -12,7 +13,8 @@
     date: "Nov 18, 2023",
     desc: "Naveen Duhan successfully defended his PhD dissertation on November 18th, 2023. His dissertation was titled \"Computational Prediction of Host-Pathogen Protein-Protein Interactions\". 
     He was advised by Dr. Rakesh Kaundal Congratulations Naveen!",
-    link: "/news/naveenDefends"
+    link: "/news/naveenDefends",
+    alt_text: "Naveen Duhan."
   }
 %}
 
@@ -23,7 +25,8 @@
     desc: "With 11 publications and being the nominee from the PSC department as an outstanding student, Naveen has been awarded
     2022-23 Outstanding Doctoral Student Researcher for the College of Agriculture and Applied Sciences (CAAS). This is a very competitive
     reward and he competed among all the applicants from the other departments in CAAS.",
-    link: "/news/naveenReward"
+    link: "/news/naveenReward",
+    alt_text: "Naveen Duhan."
   }
 %}
 
@@ -34,7 +37,8 @@
     desc: "As Mitchell finishes his summer internship with us in the Animal Dairy & Veterinary Sciences 
     department, we celebrate with pizza and soda pop. We had a short interview with him to ask him how his 
     experience in the lab was.",
-    link: "/news/mitchellFinishesInternship/"
+    link: "/news/mitchellFinishesInternship/",
+    alt_text: "Mitchell Millerberg."
   }
 %}
 
@@ -50,7 +54,8 @@
     her skills to handle larger data set like those for methylome, transcriptome, lncRNAs, miRNAs, 
     validation techniques and their analysis so that she can integrate molecular biology with 
     bioinformatics to develop the drought tolerant agricultural crops.",
-    link: "/news/simar/"
+    link: "/news/simar/",
+    alt_text: "Simardeep Kaur."
   }
 %}
 
@@ -62,7 +67,8 @@
     He aspires to go into software engineering where he can solve biological problems with technology. During the summer of 2022, 
     Mitchell will be working as an intern at Utah State University in the Animal Dairy & Veterinary Sciences department. 
     During Mitchell's free time he enjoys camping and studying map topography.",
-    link: "/news/mitchell/"
+    link: "/news/mitchell/",
+    alt_text: "Mitchell Millerberg."
   }
 %}
 
@@ -72,7 +78,8 @@
     date: "May 31, 2022",
     desc: "ProFeatX is a tool to help you extract protein features in a fast and efficient way. It contains 32 encodings to help facilitate this process.
     By extracting these features, you can use them as input for machine learning methods.",
-    link: "/profeatx/"
+    link: "/profeatx/",
+    alt_text: "ProFeatX Logo."
   }
 %}
 
@@ -81,7 +88,8 @@
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/atsubp.png?a=height&w=6&h=6",
     date: "Jan 1, 2012",
     desc: " 	The present tool is developed as a part of our broader study focused on investigating the advantages of developing",
-    link: "https://www.zhaolab.org/AtSubP/index.php/"
+    link: "https://www.zhaolab.org/AtSubP/index.php/",
+    alt_text: "AtSubP web page."
   }
 %}
 
@@ -90,7 +98,8 @@
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/rbpred.PNG?a=height&w=6&h=6",
     date: "April 1, 2012",
     desc: "Rice blast (Pyricularia grisea) continues to be the most destructive disease of rice despite decades of research towards its control.",
-    link: "https://webs.iiitd.edu.in/raghava/rbpred/"
+    link: "https://webs.iiitd.edu.in/raghava/rbpred/",
+    alt_text: "RB-pred web page."
   }
 %}
 
@@ -99,7 +108,8 @@
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/rslpred.PNG?a=height&w=6&h=6",
     date: "Jan 1, 2013",
     desc: "RICE (Oryza sativa L.) is the single most important agricultural resource which feeds more than half of the world's population.",
-    link: "https://webs.iiitd.edu.in/raghava/rslpred/"
+    link: "https://webs.iiitd.edu.in/raghava/rslpred/",
+    alt_text: "RSLpred web page."
   }
 %}
 
@@ -109,7 +119,8 @@
     date: "April 1, 2013",
     desc: "Although plastids are of significant biological interest, 
     our current understanding of the metabolite functions and capacities of different plastid types is still limited.",
-    link: "/PLpred/"
+    link: "/PLpred/",
+    alt_text: "PLpred web page."
   }
 %}
 
@@ -119,7 +130,8 @@
     date: " Jan 1, 2017",
     desc: "Laccases (E.C. 1.10.3.2) are multi-copper oxidases that have gained importance in many industries such as biofuels, 
     pulp production, textile dye bleaching,",
-    link: "/lacsubpred/"
+    link: "/lacsubpred/",
+    alt_text: "LacSubPred web page."
   }
 %}
 
@@ -128,7 +140,8 @@
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/api-net.PNG?a=height&w=6&h=6",
     date: "April 1, 2017",
     desc: "AP-iNET is a computational prediction system for host-pathogen protein-protein interactions in the Arabidopsis-Pseudomonas model system.",
-    link: "/AP-iNET/"
+    link: "/AP-iNET/",
+    alt_text: "AP-iNET web page."
   }
 %}
 
@@ -137,7 +150,8 @@
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/ligpred.PNG?a=height&w=6&h=6",
     date: "July 1,2017",
     desc: "LigPred is an attempt to discover novel lignin related proteins not discoverable through more general means.",
-    link: "/ligpred/"
+    link: "/ligpred/",
+    alt_text: "LigPred web page."
   }
 %}
 
@@ -147,7 +161,8 @@
     date: "Jan 1, 2018",
     desc: " Host-Pathogen Interactions (HPI), which includes from the initial invasion of host cells by the pathogen through the proliferation 
     of pathogen in their host, are studied to find potential genomic targets for the development of novel drugs, vaccines, and other therapeutics.",
-    link: "/PredHPI/"
+    link: "/PredHPI/",
+    alt_text: "PredHPI web page."
   }
 %}
 
@@ -157,7 +172,8 @@
     date: "April 1, 2018",
     desc: "Here we present GreeningDB, a database implemented to provide to general audience the annotation of liberibacter proteomes, 
     and a host-pathogen comparactomics tool",
-    link: "/GreeningDB/"
+    link: "/GreeningDB/",
+    alt_text: "GreeningDB web page."
   }
 %}
 
@@ -166,7 +182,8 @@
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/plantmSubp.PNG?a=height&w=6&h=6",
     date: "July 1, 2018",
     desc: "Identification of the subcellular location of protein has been an area of interest in protein science.",
-    link: "/Plant-mSubP/"
+    link: "/Plant-mSubP/",
+    alt_text: "Plant-mSubP web page."
   }
 %}
 
@@ -176,7 +193,8 @@
     date: "Jan 1, 2019",
     desc: "The Citrus genus and its associated genera (Poncirus, Microcitrus, Fourtunella and Eremocitrus) are \
     part of Aurantioideae subfamily of Rutaceae family,",
-    link: "/citSATdb/"
+    link: "/citSATdb/",
+    alt_text: "citSATdb web page"
   }
 %}
 
@@ -185,7 +203,8 @@
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/legumessdb.png?a=height&w=6&h=6",
     date: "April 1, 2019",
     desc: "Legumes are the second most essential group of crops with around ~700 genera and ~19,000 known Legume species in the world.",
-    link: "/legumeSSRdb/"
+    link: "/legumeSSRdb/",
+    alt_text: "LegumeSSRdb web page."
   }
 %}
 
@@ -194,7 +213,8 @@
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/ranchsatdb.png?a=height&w=6&h=6",
     date: "July 1, 2019",
     desc: "A database on the Bos taurus.",
-    link: "/ranchSATdb/"
+    link: "/ranchSATdb/",
+    alt_text: "ranchSATdb web page."
   }
 %}
 
@@ -204,7 +224,8 @@
     date: "Jan 1, 2020",
     desc: "Today, massive amounts of data are generated by Next-Generation Sequencing (NGS) technologies. In recent years, many algorithms, statistical methods, and software tools have been developed to perform the 
     individual analysis steps of various NGS applications.",
-    link: "/pyseqrna/"
+    link: "/pyseqrna/",
+    alt_text: "pySeqRNA standing in front of a poster."
   }
 %}
 
@@ -214,7 +235,8 @@
     date: "Jan 1, 2021",
     desc: "We present the HuCoPIA database, which contains approximately 100,000 protein-protein interactions between human proteins and three 
     strains (SARS-CoV-2, SARS-CoV and MERS) of betacoronavirus.",
-    link: "/hucopia/home/"
+    link: "/hucopia/home/",
+    alt_text: "HuCoPIA web page."
   }
 %}
 
@@ -223,7 +245,8 @@
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/malivhu.png?a=height&w=6&h=6",
     date: "April 1, 2021",
     desc: "Malivhu lets the user input two protein sequences: the virus and the host proteins.",
-    link: "/malivhu/"
+    link: "/malivhu/",
+    alt_text: "Malivhu logo."
   }
 %}
 
@@ -233,7 +256,8 @@
     date: "July 1, 2021",
     desc: "Alfalfa (Medicago sativa L.), belonging to family Fabaceae, is a highly desired forage legume in the 
     United States and in the countries around the world.",
-    link: "/alfanet/"
+    link: "/alfanet/",
+    alt_text: "alfaNET logo."
   }
 %}
 
@@ -243,7 +267,8 @@
     date: "Oct 1, 2021",
     desc: "Wheat (Triticum aestivum), the most widely cultivated crop in the world, ranks third and counts to 
     around 35% of the total grains produced around the globe.",
-    link: "/weconet/"
+    link: "/weconet/",
+    alt_text: "WeCoNET web page."
   }
 %}
 
@@ -253,7 +278,8 @@
     date: "Dec 1, 2021",
     desc: "We propose deepNEC, a novel end-to-end feature selection and classification model training approach for nitrogen biochemical 
     network-related enzyme prediction.",
-    link: "/deepNEC/"
+    link: "/deepNEC/",
+    alt_text: "deepNEC web page."
   }
 %}
 
@@ -263,7 +289,8 @@
     date: "Jan 1, 2022",
     desc: "Here, we report the development of a comprehensive database and webserver, TritiKBdb, that implements various tools to study the protein-protein interactions in the 
     Triticum species-Tilletia indica pathosystem.",
-    link: "/tritikbdb/"
+    link: "/tritikbdb/",
+    alt_text: "TritiKBdb web page."
   }
 %}
 
@@ -273,7 +300,8 @@
     date: "April 1, 2022",
     desc: "TRustDB, a database for Triticum aestivum -Puccinia species protein-protein interactions, provides valuable information about the Puccinia species, 
     which includes various functional protein annotations",
-    link: "/trustdb/"
+    link: "/trustdb/",
+    alt_text: "TRustDB web page."
   }
 %}
 
@@ -282,7 +310,8 @@
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/hucovaria.jpg?a=height&w=6&h=6",
     date: "Oct 1, 2022",
     desc: "SARS-CoV-2, a betacoronavirus, and the pathogen that causes COVID-19, has impacted the world in a variety of ways.",
-    link: "/hucovaria/"
+    link: "/hucovaria/",
+    alt_text: "HuCoVarIA web page."
   }
 %}
 
@@ -292,7 +321,8 @@
     date: "May 6, 2022",
     desc: "Raghav Kataria is a PhD student in the KAABiL lab. He is currently working on pathogen-host protein-protein interactions using computational tools and various molecular biology techniques in his research in bioinformatics.
     Raghav was recently awarded the \"Campbell Scientific Graduate Fellowship\", which is provided by \"Apogee Instruments\".",
-    link: "/news/apogeeInstruments/"
+    link: "/news/apogeeInstruments/",
+    alt_text: "Raghav Kataria."
   }
 %}
 
@@ -303,7 +333,8 @@
     desc: "Colin is a Computer Engineering BS student who has recently started as the KAABiL HPC System Administrator. 
     He will help to ensure that the high-performance computer cluster at the KAABiL lab works properly. 
     He also helps maintain the website and helps install the software you can use on the HPC. If you are experiencing any problems with the site or the HPC, let him know.",
-    link: "/news/newAdminColin/"
+    link: "/news/newAdminColin/",
+    alt_text: "Colin Bernhardt."
   }
 %}
 
@@ -313,7 +344,8 @@
     date: "May 25, 2021",
     desc: "Andrew is a computer science student and software developer. He currently works on developing a method to create datasets for deep learning image 
     recognition tasks, enabling robots to generate their own training data.",
-    link: "/news/newAndrew/"
+    link: "/news/newAndrew/",
+    alt_text: "Andrew Jouffray standing next to a woman."
   }
 %}
 
@@ -324,7 +356,8 @@
     desc: "Student researcher Kolton Hauck is mentored by Rakesh Kaundal, assistant professor of bioinformatics in the PSC department, 
     and investigates protein-protein interactions (PPIs) that are necessary for the SARS-CoV-2 virus to gain access to host cells, 
     replicate and proliferate.",
-    link: "https://www.usu.edu/today/story/students-receive-grants-to-conduct-impactful-undergraduate-research/"
+    link: "https://www.usu.edu/today/story/students-receive-grants-to-conduct-impactful-undergraduate-research/",
+    alt_text: "Kolton Hauck."
   }
 %}
 
@@ -334,7 +367,8 @@
     date: "Mar 3, 2021",
     desc: "David is a CS PhD student from Colombia. He worked full-time as a full-stack software developer for 6 years while finishing his 
     bachelor's degree in Software and Computer Engineering and got a MSc. degree in Computational Biology.",
-    link: "/news/newDavid/"
+    link: "/news/newDavid/",
+    alt_text: "David Guevara."
   }
 %}
 
@@ -343,9 +377,10 @@
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/profile/khauck.jpg?a=height&w=6&h=6",
     date: "Feb 3, 2021",
     desc: "Kolton is a Biological Engineering major and is working on a minor in Computer Science. He wants to use computers to solve modern-day 
-biological problems.
-He enjoys eating, sleeping and working out.",
-    link: "/news/newKolton/"
+    biological problems.
+    He enjoys eating, sleeping and working out.",
+    link: "/news/newKolton/",
+    alt_text: "Kolton Hauck."
   }
 %}
 
@@ -355,7 +390,8 @@ He enjoys eating, sleeping and working out.",
     date: "Jan 11-15, 2020",
     desc: "Naveen Duhan, a PhD student from our lab, attended the International Plant Animal Genome Conference in San Diego. He 
     presented a poster on citSatdb and Greeningdb, and presented an oral talk on citSatdb.",
-    link: "/news/citsatdb/"
+    link: "/news/citsatdb/",
+    alt_text: "Naveen Duhan standing in front of a poster."
   }
 %}
 
@@ -364,17 +400,9 @@ He enjoys eating, sleeping and working out.",
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/profile/shelby.jpg?a=height&w=6&h=6",
     date: "Mar 21, 2020",
     desc: "Shelby is a Biochemistry major who aspires to go into software engineering. He has worked with mobile apps, websites 
-(including the front and back end), and desktop applications. He is a percussionist in his spare time.",
-    link: "/news/newadmin1/"
-  }
-%}
-
-{% set alfanet = {
-    title: "alfaNET: A new host-pathogen interactome tool is now online",
-    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/alfalfa_logo.png?a=height&w=1&h=1",
-    date: "Jul 1, 2021",
-    desc: "alfaNET is a database implemented to provide host-pathogen interactome information to aid the development of molecular-based strategies to mitigate bacterial blight impact in Alfalfa.",
-    link: "http://bioinfo.usu.edu/alfanet/"
+    (including the front and back end), and desktop applications. He is a percussionist in his spare time.",
+    link: "/news/newadmin1/",
+    alt_text: "Shelby McCowan."
   }
 %}
 
@@ -383,8 +411,9 @@ He enjoys eating, sleeping and working out.",
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/events/PAG-2019/g2.jpg?a=height&w=6&h=6",
     date: "Dec 1, 2019",
     desc: "Models to predict HPI were generated by the combination of features and machine learning methods. The best models from this 
-benchmark were implement in the DeepHPI webserver",
-    link: "/news/newdeephpi/"
+    benchmark were implement in the DeepHPI webserver",
+    link: "/news/newdeephpi/",
+    alt_text: "Student standing in front of a poster."
   }
 %}
 
