--- a/src/views/pages/news/news.scss
+++ b/src/views/pages/news/news.scss
@@ -48,7 +48,7 @@ h5.header {
   .desc {
     font-size: 98%;
     font-weight: 400;
-    color: #909090;
+    color: #4F4F4F;
     margin-top: 10px;
     transition: var(--time-mid);
   }
