--- a/src/views/components/event-link.njk
+++ b/src/views/components/event-link.njk
@@ -2,7 +2,7 @@
   <article class="container-fluid kbl-event-link my-2 px-0">
     <a href="{{ event.link }}">
       <div class="img-container">
-        <img class="img-fluid" src="{{ RaikouServer }}{{ event.img }}">
+        <img class="img-fluid" src="{{ RaikouServer }}{{ event.img }}" alt="{{ event.alt_text }}">
       </div>
     </a>
 
