--- a/src/views/pages/events/data.njk
+++ b/src/views/pages/events/data.njk
@@ -3,7 +3,8 @@
                 title: 'USU Data Science and AI Event',
                 location: 'Utah State University, Logan, UT',
                 date: 'January 14, 2025',
-                img: '/image/bioinfo/events/dsaic/thumb.PNG'
+                img: '/image/bioinfo/events/dsaic/thumb.PNG',
+                alt_text: 'Student doing a presentation at a public event.'
               }
             %}
              {% set mitchellFarewell = {
@@ -11,7 +12,8 @@
                 title: 'Mitchell Millerberg Completes Summer Internship',
                 location: 'Utah State University, Logan, UT',
                 date: 'Aug 8, 2022',
-                img: '/image/bioinfo/events/2022-Mitchell-Farewell/PXL_20220812_194602003.MP.jpg'
+                img: '/image/bioinfo/events/2022-Mitchell-Farewell/PXL_20220812_194602003.MP.jpg',
+                alt_text: 'Mitchell Millerberg'
               }
             %}
             {% set ritcheyScience = {
@@ -19,7 +21,8 @@
                 title: 'High school student from the lab won award(s)',
                 location: 'ISEF 2022, Georgia, Atlanta',
                 date: 'May 07-13, 2022',
-                img: '/image/bioinfo/events/ritcheyScience/20220510-3.jpg'
+                img: '/image/bioinfo/events/ritcheyScience/20220510-3.jpg',
+                alt_text: 'Student standing in front of poster.'
               }
             %}
             {% set bigDataConf2022 = {
@@ -27,7 +30,8 @@
                 title: 'KAABiL Members Presented at Statistics Conference',
                 location: 'Utah State University, Logan, UT',
                 date: 'May 16-19, 2022',
-                img: '/image/bioinfo/events/bigDataConf2022/PXL_20220518_191935611.MP.jpg'
+                img: '/image/bioinfo/events/bigDataConf2022/PXL_20220518_191935611.MP.jpg',
+                alt_text: 'Man standing on stage pesenting with a screen behind him.'
               }
             %}
             {% set koltonCapitolHill = {
@@ -35,7 +39,8 @@
                 title: 'Kolton Presents at Research on Capitol Hill',
                 location: 'Capitol Hill, Salt Lake City, UT',
                 date: 'Feb 8, 2022',
-                img: '/image/raw/bioinfo/events/koltonCapitolHill/DSC04533.jpg'
+                img: '/image/raw/bioinfo/events/koltonCapitolHill/DSC04533.jpg',
+                alt_text: 'Several groups of people presenting posters in the Utah capitol building.'
               }
             %}
             {% set pag2021 = {
@@ -43,7 +48,8 @@
                 title: '2021 ASA, CSSA, SSSA International Annual Meeting',
                 location: 'Salt Palace Convention Center, Salt Lake City, UT',
                 date: 'Nov 7-10, 2021',
-                img: '/image/raw/bioinfo/events/trisociety/1.jpg'
+                img: '/image/raw/bioinfo/events/trisociety/1.jpg',
+                alt_text: 'Researchers standing in front of a sign that reads: A Creative Economy for Sustainable Development.'
               }
             %}
             {% set shelby = {
@@ -51,7 +57,8 @@
                 title: "Shelby\'s Farewell",
                 location: '4700 Old Main Hill Logan, UT 84322',
                 date: 'Nov 29, 2021',
-                img: '/image/bioinfo/events/farewellShelby/IMG_6824.JPG'
+                img: '/image/bioinfo/events/farewellShelby/IMG_6824.JPG',
+                alt_text: 'People eating in the Center for Integrated Biosystems Lobby.'
               }
             %}
             {% set pag2020 = {
@@ -59,7 +66,8 @@
                 title: 'Plant & Animal Genome Conference',
                 location: '500 Hotel Circle N, San Diego, CA',
                 date: 'Jan 11-15, 2020',
-                img: '/image/raw/bioinfo/events/IMG_20200113_151858.jpg'
+                img: '/image/raw/bioinfo/events/IMG_20200113_151858.jpg',
+                alt_text: 'Researcher standing in front of a poster.'
               }
             %}
             {% set cristian = {
@@ -67,7 +75,8 @@
                 title: "Cristian\'s Farewell",
                 location: '4700 Old Main Hill Logan, UT 84322',
                 date: 'July 1, 2020',
-                img: '/image/bioinfo/events/farewellCristian/IMG_3702.JPG'
+                img: '/image/bioinfo/events/farewellCristian/IMG_3702.JPG',
+                alt_text: 'Center for Integrated Biosystems staff standing in front of the building.'
               }
             %}
             {% set pag = {
@@ -75,7 +84,8 @@
                 title: 'Plant & Animal Genome Conference',
                 location: '500 Hotel Circle N, San Diego, CA',
                 date: 'Jan 12-16, 2019',
-                img: '/image/raw/bioinfo/events/PAG-2019/g2.jpg'
+                img: '/image/raw/bioinfo/events/PAG-2019/g2.jpg',
+                alt_text: 'Researcher standing in front of poster.'
               }
             %}
             {% set psc = {
@@ -83,7 +93,8 @@
                 title: 'PSC Showcase',
                 location: '4820 Old Main Hill, Logan, UT',
                 date: 'Mar 23, 2019',
-                img: '/image/raw/bioinfo/events/PSCshowcase_2019/d791cf15-ac89-4759-97d8-239827926698.JPG'
+                img: '/image/raw/bioinfo/events/PSCshowcase_2019/d791cf15-ac89-4759-97d8-239827926698.JPG',
+                alt_text: 'Researchers and staff standing in front of a poster.'
               }
             %}
             {% set cricket = {
@@ -91,7 +102,8 @@
                 title: 'Cricket in Utah',
                 location: '6252 W 6200 S, Kearns, UT',
                 date: 'Jul 13, 2019',
-                img: '/image/raw/bioinfo/events/Cricket_2019/7d2e764e.JPG'
+                img: '/image/raw/bioinfo/events/Cricket_2019/7d2e764e.JPG',
+                alt_text: 'Center for Integrated Biosystems holding a gold-colored statute of a man holding a cricket bat.'
               }
             %}
             {% set winter = {
@@ -99,7 +111,8 @@
                 title: 'Utah State University Winter',
                 location: '4700 Old Main Hill, Logan, UT',
                 date: 'Dec 1, 2019',
-                img: '/image/raw/bioinfo/events/USU_winter/IMG_1201.JPG'
+                img: '/image/raw/bioinfo/events/USU_winter/IMG_1201.JPG',
+                alt_text: 'Utah State University campus with snow-covered mountains in the distance.'
               }
             %}
             {% set rocky = {
@@ -107,7 +120,8 @@
                 title: 'Rocky Bioinformatics Conference',
                 location: '130 Wood Road, Snowmass Village, CO',
                 date: 'Dec 5-7, 2018',
-                img: '/image/raw/bioinfo/events/Rocky_2018/IMG_1335.JPG?ro=180'
+                img: '/image/raw/bioinfo/events/Rocky_2018/IMG_1335.JPG?ro=180',
+                alt_text: 'Dr. Kaundal standing in front of a poster.'
               }
             %}
             {% set hsing = {
@@ -115,7 +129,8 @@
                 title: 'Visit to National Chung Hsing University',
                 location: '145 Xingda Road, S District, Taichung City, Taiwan',
                 date: 'Mar 2-9, 2018',
-                img: '/image/raw/bioinfo/events/NCHU-2018/IMG_5118.JPG'
+                img: '/image/raw/bioinfo/events/NCHU-2018/IMG_5118.JPG',
+                alt_text: 'National Chung Hsing University'
               }
             %}
             {% set osucup = {
@@ -123,7 +138,8 @@
                 title: 'Won President\'s Cup at OSU',
                 location: '246 Noble Research Center, Stillwater, OK',
                 date: 'Dec 10, 2013',
-                img: '/image/raw/bioinfo/events/osupres/11310703416_5d39f89a49.png'
+                img: '/image/raw/bioinfo/events/osupres/11310703416_5d39f89a49.png',
+                alt_text: 'Dr. Kaundal holding a trophy above his head.'
               }
             %}
 
