Added more image alt tags

--- a/src/views/components/conf-card.njk
+++ b/src/views/components/conf-card.njk
@@ -7,7 +7,7 @@
         <div class="year-banner date">{{ conference.type }}</div>
 {% endif %}
         <img class="conf-card-img"
-          src="{{ RaikouServer }}/image/aspect/bioinfo/conf.jpg?a=width&w=1&h=1"/>
+          src="{{ RaikouServer }}/image/aspect/bioinfo/conf.jpg?a=width&w=1&h=1" alt="Seats in an auditorium."/>
       </div>
       <div class="col p-4">
         <div class="conf-authors">{{ conference.authors | safe }}</div>
