--- a/src/views/components/event-modal.njk
+++ b/src/views/components/event-modal.njk
@@ -16,7 +16,7 @@
             </div>
           </div>
           <div class="col-10">
-            <img class="img-fluid event-modal-img" id="modal-img" src="{{ picture }}"/>
+            <img class="img-fluid event-modal-img" id="modal-img" src="{{ picture }}" alt="event-modal-test" />
           </div>
           <div class="col-1">
             <div class="modal-btn-container h-100">
