--- a/src/views/pages/home/_head-carousel.njk
+++ b/src/views/pages/home/_head-carousel.njk
@@ -39,7 +39,7 @@
                         </div>
                     </li>
                     <li class="seq-step1" id="step2" style="background-color: black;">
-                        <img class="fix-picture" src="{{ RaikouServer }}/image/bioinfo/g195.png"/>
+                        <img class="fix-picture" src="{{ RaikouServer }}/image/bioinfo/g195.png" alt="Host and Pathogen proteins combining." />
                         <div class="bg-blend"></div>
                         <div class="seq-content">
 
@@ -56,7 +56,7 @@
                         </div>
                     </li>
                     <li class="seq-step1" id="step3" style="background-color: black;">
-                        <img class="fix-picture" src="{{ RaikouServer }}/image/bioinfo/g95.png"/>
+                        <img class="fix-picture" src="{{ RaikouServer }}/image/bioinfo/g95.png" alt="Large graph with hundreds of nodes with the words 'Interolofy', 'Domain', 'GO-similarity', 'Deep Learning', 'Phylogenetic profiling', and 'Support-Vector machines'." />
                         <div class="bg-blend"></div>
                         <div class="seq-content">
 
@@ -88,7 +88,7 @@
                         </div>
                     </li>
                         <li class="seq-step1" id="step5" style="background-color: black;">
-                        <img class="fix-picture" src="{{ RaikouServer }}/image/bioinfo/slider/homePageTeam.jpg"/>
+                        <img class="fix-picture" src="{{ RaikouServer }}/image/bioinfo/slider/homePageTeam.jpg" alt="Kaabil staff and students in front of the Center for Integrated Biosystems building." />
                         <div class="bg-blend"></div>
                         <div class="seq-content">
 
@@ -103,8 +103,8 @@
                     </li>
                 </ul>
                 <div class="sec-navigate-wrap center-y">
-                    <button type="button" class="seq-next"></button>
-                    <button type="button" class="seq-prev"></button>
+                    <button type="button" class="seq-next" aria-label="next"></button>
+                    <button type="button" class="seq-prev" aria-label="previous"></button>
                 </div>
             </div>
         </div>
