--- a/src/views/pages/home/_research-data.njk
+++ b/src/views/pages/home/_research-data.njk
@@ -39,7 +39,7 @@
     desc: "Investigate diversity of enzymes in soil metagenomes and develop advanced tools...",
     img: "/image/raw/bioinfo/meta_new.png",
     link: "/research",
-    alt_text: "Diagram of various items. A tree with worms and microbes at its roots, a series of shapes connected by lines, and a gear with wires and nodes extending from it with the label machine learning. The words mineralization and nitrification are at the with chemical formulas (H2O and CO2 for mineralization and NH4+, NO2-, and NO3- for nitrification)."
+    alt_text: "Diagram of mineralization and nitrification."
   }
 %}
 
