--- a/src/views/pages/people/_rakesh.njk
+++ b/src/views/pages/people/_rakesh.njk
@@ -5,7 +5,7 @@
                     <a href="/people/rakesh">
                     <figure>
                         <img class="img-responsive" style="width: 210px; height:210px"
-                          src="{{ RaikouServer }}/image/aspect/profile/RK_2.jpg">
+                          src="{{ RaikouServer }}/image/aspect/profile/RK_2.jpg" alt="rakesh-test">
                         <figcaption>
                             <h3 class="fig-title">Contact Information</h3>
                             <div class="fig-meta">
