--- a/src/views/pages/research/research.njk
+++ b/src/views/pages/research/research.njk
@@ -53,7 +53,7 @@
                   <div class="col-sm-6">
                       <figure class="samevide-figure">
                           <img src="{{ RaikouServer }}/image/bioinfo/doctor.jpg" style="width: 570px; height: 323px;"
-                              class="img-responsive img-round" alt="Illustration of a scientist in a white lab coat standing near a microscope. A picture of a synapse is hung behind them.">
+                              class="img-responsive img-round" alt="Illustration of a scientist standing near a microscope.">
                       </figure>
                   </div>
               </div>
