--- a/src/views/pages/tools/_tool-section.njk
+++ b/src/views/pages/tools/_tool-section.njk
@@ -5,7 +5,7 @@
     <article class="kbl-research-card-container tool mx-auto">
       <div class="kbl-research-card">
         <section class="img-tool">
-          <img src="{{ tool.img }}">
+          <img src="{{ tool.img }}" alt="tool-test">
         </section>
         <section class="px-3 flex-text-wrapper pt-2">
           <div class="card-title">{{ tool.title }}</div>
