--- a/src/views/universal/_navbar-small.njk
+++ b/src/views/universal/_navbar-small.njk
@@ -8,7 +8,7 @@
 
       <div class="col-sm-5 d-none d-sm-block ps-5">
         <a class="navbar-brand d-inline" href="/">
-          <img src="{{ RaikouServer }}/image/bioinfo/kbllogo.png">
+          <img src="{{ RaikouServer }}/image/bioinfo/kbllogo.png" alt="Kaabil Logo: Kaundal Artificial intelligence & Advanced Bioinformatics Lab.">
         </a>
       </div>
 
