--- a/src/views/pages/news/template.njk
+++ b/src/views/pages/news/template.njk
@@ -40,7 +40,7 @@
       <div class="row justify-content-center">
         <h1 class="text-center blog">{{ title }}</h1>
         <div class="col-xl-3 col-md-4 col-sm-5 col-6">
-          <img class="mt-4 rounded" style="display: block; max-width: 100%; height: 30vh; float:right" src="{{img}}">
+          <img class="mt-4 rounded" style="display: block; max-width: 100%; height: 30vh; float:right" src="{{img}}" alt="template-test">
           </div>
         <div class="col-6">
           {% include (file) %}
