--- a/src/views/pages/people/rakesh/backup.njk
+++ b/src/views/pages/people/rakesh/backup.njk
@@ -14,7 +14,7 @@
   <div class="container">
       <div class="row">
           <div class="col-sm-4 col-md-4 pull-up-240 ">
-              <img class="img-bit-round zoom" alt="" style="width: 210px; height:289.85px" src="assets/img/profile/kaundal-rakesh2.jpg">
+              <img class="img-bit-round zoom" alt="" style="width: 210px; height:289.85px" src="assets/img/profile/kaundal-rakesh2.jpg" alt="Rakesh Kaundal">
               <div class="sp-blank-20"></div>
               <address class="addr_future_memb">
                   <h4 class="entry-title">Address</h4>
