fixed image and alt tags

--- a/src/views/pages/news/covidtracker/covidtracker.njk
+++ b/src/views/pages/news/covidtracker/covidtracker.njk
@@ -1,3 +1,3 @@
 {% from "pages/news/template.njk" import newNewsPage %}
 
-{{ newNewsPage("KAABiL COVID-19 Tracker", "covidtracker","https://intermountainhealthcare.org/-/media/coronavirus-covid-19.jpg") }}
+{{ newNewsPage("KAABiL COVID-19 Tracker", "covidtracker","https://images.unsplash.com/photo-1584118624012-df056829fbd0?q=80&w=1032&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D") }}
