--- a/src/views/pages/news/data.njk
+++ b/src/views/pages/news/data.njk
@@ -419,7 +419,7 @@
 
 {% set covidtracker = {
     title: "COVID-19 Stats Tracker",
-    img: "https://intermountainhealthcare.org/-/media/coronavirus-covid-19.jpg",
+    img: "https://images.unsplash.com/photo-1584118624012-df056829fbd0?q=80&w=1032&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D",
     date: "March 26, 2020",
     desc: "KAABiL now has a COVID tracker! You can use our dashboard to see COVID stats around the world. Stay safe!",
     link: "/news/covidtracker/"
