--- a/src/views/universal/_footer.njk
+++ b/src/views/universal/_footer.njk
@@ -7,7 +7,7 @@
         <div class="row">
           <div class="col-10">
             <a href="/">
-              <img class="img-fluid" src="{{ RaikouServer }}/image/bioinfo/bioinfo_logoaa.png" alt="Utah State Univesrsity Bioinformatics Logo: Deciphering -OMICS bigdata."/>
+              <img class="img-fluid" src="{{ RaikouServer }}/image/bioinfo/bioinfo_logoaa.png" alt="Utah State University Bioinformatics Logo: Deciphering -OMICS bigdata."/>
             </a>
           </div>
         </div>
