fix contrast error: image hides background color of text unless image fails to load

--- a/src/views/pages/home/_home.scss
+++ b/src/views/pages/home/_home.scss
@@ -3,6 +3,7 @@
 
   background-size: cover;
   background-repeat: no-repeat;
+  background-color: black;
   border-radius: var(--border-radius);
   color: #fff;
 
