--- a/src/views/pages/people/_new-rakesh.njk
+++ b/src/views/pages/people/_new-rakesh.njk
@@ -13,7 +13,7 @@
               <div class="col-auto gx-1">
               <a href="https://scholar.google.com/citations?user=Vu1-tr8AAAAJ&hl=en&oi=ao" target="_blank" rel="noreferrer noopener"
                   class="kbl-icon-google align-middle">
-                <i class="ai ai-google-scholar-square ai-lg"></i>
+                <i class="ai ai-google-scholar-square ai-lg"zz></i>
               </a>
               </div>
               <div class="col-auto gx-1">
@@ -25,7 +25,8 @@
               <a href="https://www.researchgate.net/profile/Rakesh_Kaundal" target="_blank" rel="noreferrer noopener" class="kbl-icon-researchgate align-middle">
                 <i class="ai ai-researchgate-square ai-lg"></i>
               </a>
-              </div>
+              </div>PasswordEasier4Testing**
+              
               <div class="col-auto gx-1">
               <a href="https://www.linkedin.com/in/r-kaundal" target="_blank" rel="noreferrer noopener" class="kbl-icon-linkedin align-middle">
                 <i class="fab fa-linkedin ai-lg"></i>
