--- a/src/views/components/home-paper.njk
+++ b/src/views/components/home-paper.njk
@@ -11,7 +11,7 @@
         </div>
         <div class="description">
             <a class="link-with-icon" href={{paper.doiLink | safe}}
-            target="_blank"><i class="ion-ios-browsers-outline"></i></a>{{paper.doiTitle}}
+            target="_blank" aria-label="{{paper.doiLink}} on DOI."><i class="ion-ios-browsers-outline"></i></a>{{paper.doiTitle}}
             <!-- <i style="font-style: normal;" class="pull-right"> PMCID:<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6826667/" target="_blank"> PMC6826667</a></i> -->
         </div>
     </div>
