--- a/src/views/pages/home/the-team.njk
+++ b/src/views/pages/home/the-team.njk
@@ -19,16 +19,19 @@
                       </div>
                       <span class="kbl-social-wrapper">
                         <a href="https://scholar.google.com/citations?user=Vu1-tr8AAAAJ&hl=en&oi=ao" target="_blank" rel="noreferrer noopener"
-                            class="kbl-icon-google align-middle">
+                            class="kbl-icon-google align-middle" aria-label="Rakesh Kaundal on Google Scholar.">
                           <i class="ai ai-google-scholar-square ai-lg"></i>
                         </a>
-                        <a href="https://orcid.org/0000-0001-8683-1240" target="_blank" rel="noreferrer noopener" class="kbl-icon-orcid align-middle">
+                        <a href="https://orcid.org/0000-0001-8683-1240" target="_blank" rel="noreferrer noopener" class="kbl-icon-orcid align-middle"
+                            aria-label="Rakesh Kaundal on ORCiD.">
                           <i class="ai ai-orcid-square ai-lg"></i>
                         </a>
-                        <a href="https://www.researchgate.net/profile/Rakesh_Kaundal" target="_blank" rel="noreferrer noopener" class="kbl-icon-researchgate align-middle">
+                        <a href="https://www.researchgate.net/profile/Rakesh_Kaundal" target="_blank" rel="noreferrer noopener" 
+                            class="kbl-icon-researchgate align-middle" aria-label="Rakesh Kaundal on ResearchGate.">
                           <i class="ai ai-researchgate-square ai-lg"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/r-kaundal" target="_blank" rel="noreferrer noopener" class="kbl-icon-linkedin align-middle">
+                        <a href="https://www.linkedin.com/in/r-kaundal" target="_blank" rel="noreferrer noopener" class="kbl-icon-linkedin align-middle"
+                            aria-label="Rakesh Kaundal on Linkedin.">
                           <i class="fab fa-linkedin ai-lg"></i>
                         </a>
 
