--- a/src/views/pages/people/_new-rakesh.njk
+++ b/src/views/pages/people/_new-rakesh.njk
@@ -25,7 +25,7 @@
               <a href="https://www.researchgate.net/profile/Rakesh_Kaundal" target="_blank" rel="noreferrer noopener" class="kbl-icon-researchgate align-middle">
                 <i class="ai ai-researchgate-square ai-lg"></i>
               </a>
-              </div>PasswordEasier4Testing**
+              </div>
               
               <div class="col-auto gx-1">
               <a href="https://www.linkedin.com/in/r-kaundal" target="_blank" rel="noreferrer noopener" class="kbl-icon-linkedin align-middle">
